📦 refactor: refactoring of card text due to the translator and refactoring of styles

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Advices</title>
+    <title>The friendly advisor</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og: description" content="Se conselho fosse bom..." />
+    <meta
+      property="og: image"
+      content="https://raw.githubusercontent.com/CristhianFSantos/advices/master/src/assets/capa.png"
+    />
+    <meta property="og: site_name" content="The friendly advisor" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -24,7 +31,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Noto+Serif+Display&display=swap"
       rel="stylesheet"
     />
   </head>
